--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,67 @@
     --text-color: #f2f2f2;
 }
 
-h1, h2, p { color: var(--text-color); }
+h1, h2, p, nav a, #home { 
+  color: var(--text-color); 
+  text-decoration: none; 
+}
 
-h1, h2  { font-family: "Barlow Condensed", sans-serif; }
+h1, h2, nav, #home  { font-family: "Barlow Condensed", sans-serif; }
 
 p { font-family: "Kanit", sans-serif; }
+
+ header {
+  height: 96px;
+  background-color: var(--secondary-color);
+}
+
+nav {
+  display: none;
+}
+
+.x-icon {
+  display: none;
+}
+
+#home {
+  position: absolute; 
+  font-size: 1.5em;
+  font-weight: 600;
+  margin-top: 33px;
+  margin-left: 1em;
+  z-index: 10;
+  background: none;
+}
+
+.nav-icon, .x-icon {
+  position: absolute;
+  right: 0;
+  fill: var(--text-color);
+  width: 32px;
+  margin-top: 32px;
+  margin-right: 1em;
+  background: none;
+}
+
+@media (min-width: 1099px) {
+  .nav-icon {
+    display: none;
+  }
+
+  nav {
+    position: absolute; 
+    display: flex;
+    right: 0;
+    margin-top: 33px;
+    font-size: 1.5em;
+    font-weight: 500;
+    z-index: 10;
+    background: none;
+  }
+
+  nav a {
+    margin-right: 2em;
+    background: none;
+  }
+}
+
