--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,11 @@ footer {
   padding-top: 1em;
 }
 
+/* Remove text decoration from any link */
+a {
+  text-decoration: none;
+}
+
 /* Set the footer to display at the bottom of the view port when overlay is active */
 .overlay-footer {
   border-top: solid var(--text-color);
@@ -84,7 +89,6 @@ footer {
 nav, .x-icon-hide {
   display: none;
 }
-
 /* Set bottom margin for nav items in overlay */
 nav a {
   margin-bottom: 0.5em;
@@ -148,6 +152,75 @@ nav.menu-open {
   margin-bottom: 1em;
 }
 
+/* HOME PAGE */
+.tagline {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute; /* Position absolutely within the container */
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  width: 100%;
+  margin: 0;
+  
+}
+
+.background-container {
+  background-image: url('./Assets/splash-desktop.png');
+  background-size: cover; 
+  background-position: center; 
+  height: 50vh; 
+  margin-top: -7.3em;
+  position: relative; /* Establish positioning context for absolutely positioned children */
+}
+.heading1 {
+  font-size: 24px;
+  
+}
+
+.heading2 {
+  margin-top: -1em;
+  font-size: 20px;
+  
+}
+
+.main-content-text {
+  margin: 20px;
+}
+
+.newappbanner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-top: -5em;
+  margin-left: 20px;
+  width: 100px;
+}
+
+.main-content-imgs {
+  position: relative;
+  text-align: center;
+  margin: 20px;
+}
+
+.mainpageimgs{
+  width:100%;
+  border-radius: 8px;
+}
+
+.img-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  width: 90%;
+
+}
+
 @media (min-width: 1099px) {
   /* Set nav icon and X icon to not display when the screen is in desktop view   */
   .nav-mobile-icon, .x-icon {
@@ -174,14 +247,17 @@ nav.menu-open {
   .chevron {
     display: none;
   }
-
+  .background-container{
+    height: 100vh; 
+  }
+  .tagline{
+    top: 30%; 
+    font-size: 56px;
+  }
 }
 
 /* NAVIGATION ANIMATIONS */
 /* ----------------------------------------------- */
-
-
-
 
 /* Set keyframes to transition elements from invisible to visible */
 @keyframes AppearOnPage {
@@ -223,9 +299,6 @@ nav a {
   opacity: 0; 
   animation: slightlyElevate 300ms ease-in 300ms forwards; /* Adjust duration and delay as needed */
 }
-
-
-
 
 /* ----------------------------------------------- */
 /* NAVIGATION ANIMATIONS */
