--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,6 @@ body {
   flex: 1;
 }
 
-/* Temporary margin for filler page titles */
-h1 {
-  margin: 20px
-}
-
 /* Set the text color and text decoration for all text on the page */
 h1, h2, p, nav a, #home, .footerhome, .footercontact  { 
   color: var(--text-color); 
@@ -78,7 +73,6 @@ a {
   margin-bottom: 0.5em;
   background: none;
   font-weight: 600;
-  font-size: 20px;
 }
 /* Set the footer */
 .footer-text { 
@@ -175,7 +169,7 @@ nav.menu-open {
   background-size: cover; 
   background-position: center; 
   height: 50vh; 
-  margin-top: -7.3em;
+  margin-top: -6em;
   position: relative;
 }
 
@@ -200,7 +194,7 @@ nav.menu-open {
 }
 
 .our-details-heading {
-  font-size: 2.5em;
+  /* font-size: 2.5em; */
   margin: 0.5em 0;
 }
 
@@ -232,7 +226,7 @@ input:hover, textarea:hover {
 
 .contact-heading {
   margin: -2em 0em 0em 20px;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 label {
@@ -281,6 +275,12 @@ input:-webkit-autofill {
 
 /* SERVICES PAGE */
 
+.service-card-container {
+  display: grid;
+  gap: 20px;
+  margin: 20px;  
+}
+
 /* Set styling for the New App banner */
 .newappbanner {
   display: flex;
@@ -320,13 +320,55 @@ input:-webkit-autofill {
   width: 90%;
 }
 
-.service-card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin: 20px;
+/* CARD STYLING */
+
+.service-image-desktop {
+  display: none;
 }
+
+.service-banner-container {
+  position: relative;
+}
+
+.service-title, .service-title1, .service-title2, .service-title3 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 2.5rem;
+}
+
+.service-tag, .service-tag1, .service-tag2, .service-tag3 {
+  position: absolute;
+  top: 70px;
+  left: 20px;
+  font-size: 1rem;
+} 
+
+.service-cta, .service-cta1, .service-cta2, .service-cta3 {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  font-size: 0.7rem;
+  text-decoration: underline;
+  color: var(--text-color);
+}
+
+
+.service-image-mobile { 
+  width: 100%;
+  height: auto;
+  opacity: 1;
+}
+
+.services-text-container {
+  padding: 60px 20px;
+
+}
+
+.page-blurb {
+  padding: 20px;
+}
+ 
 
 /* NAVIGATION ANIMATIONS */
 
@@ -372,26 +414,9 @@ nav a {
 }
 
 
-
 /* MEDIA QUERY */
 @media (min-width: 900px) {
-  .service-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    justify-content: center;
-    gap: 20px;
-    width: 70%;
-    margin: 4em auto;
 
-  }
-  .imgs-container {
-    width: 600px;
-  }
-}
-
-
-@media (min-width: 1099px) {
   /* Set nav icon and X icon to not display when the screen is in desktop view   */
   .nav-mobile-icon, .x-icon {
     display: none;
@@ -417,6 +442,97 @@ nav a {
   .chevron {
     display: none;
   }
+
+  .service-image-desktop {
+    display: block;
+    width: 100%;
+  }
+
+  .page-blurb {
+    width: 800px;
+    margin: auto;
+    font-size: 20px;
+    padding-bottom: 150px;
+  }
+
+  .service-image-mobile {
+    display: none;
+  }
+
+  .service-title {
+    right: 9.25em;
+  }
+
+  .service-title1 {
+    right: 7.37em;
+  }
+
+  .service-title2 {
+    right: 8.35em;
+  }
+
+  .service-title3 {
+    right: 8em;
+  }
+
+  .service-title, .service-title1, .service-title2, .service-title3 {
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    top:0em;
+  }
+  
+
+  .service-tag {
+    right: 8.9em;
+  }
+
+  .service-tag1 {
+    right: 5.4em;
+  }
+
+  .service-tag2 {
+    right: 13.3em;
+  }
+
+  .service-tag3 {
+    right: 5.4em;
+  }
+ .service-tag, .service-tag1, .service-tag2, .service-tag3 {
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    top:2.5em;
+  }
+
+  .service-cta{
+    right: 24.6em;
+  }
+
+  .service-cta1 {
+    right: 22.6em;
+  } 
+
+  .service-cta2 {
+    right: 25.5em;
+  } 
+
+  .service-cta3 {
+    right: 22.5em;
+  } 
+
+ .service-cta, .service-cta1, .service-cta2, .service-cta3 {
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    top: 10em;
+  }   
+  
+} 
+
+
+@media (min-width: 1099px) {
+  
   /* Increase the size of the home page tag line */
   .tagline{
     top: 30%; 
@@ -436,16 +552,31 @@ nav a {
   }
 }
 
+@media (min-width: 1250px) {
+  
+.service-card-container {
+  display: grid;
+  grid-template-rows: 430px 500px;
+  grid-template-columns: 600px 600px;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 60px;
+ }
 
- /* @media (min-width: 1200px) {
-  .contact-details, .contact-form-container {
-    margin: 2em 4em;
-  }
-};  */
+ .imgs-container {
+  width: 600px;
+}
+}
 
-/* @media (min-width: 1850px) {
-  .service-card-container {
-    margin: 0 400px;
-  }
-}; */
+@media (min-width: 1900px) {
+.service-title, .service-title1, .service-title2, .service-title3{
+  top:3.5em;
+}
+.service-tag, .service-tag1, .service-tag2, .service-tag3 {
+  top:9.5em;
+}
+.service-cta, .service-cta1, .service-cta2, .service-cta3 {
+  top: 25em;
+}   
+}
 
