--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,7 @@ input:-webkit-autofill {
 
 .error-message, .success-message {
   margin-left: 20px;
+  margin-right: 20px;
   margin-top: -54px;
 }
 
